trc khi push 8/8